# DaysTillCountdownTimer

./: CONFIGURATION.md  LICENSE  README.md
daystill/: .gitignore  Cargo.toml  README.md
daystill/assets/: config.json
daystill/src/: config.json  main.rs  mod.rs  settings.rs  style.css
