[package]
name = "daystill"
version = "0.1.0"
edition = "2021"
authors = ["Dagmawi Solomon"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.8.2", package = "gtk4", features = ["v4_6"] }
chrono = "0.4.38"
async-channel = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
[build-dependencies]
glib-build-tools = "0.19.0"
